--- a/tcf_website/templates/course/user_courses.html
+++ b/tcf_website/templates/course/user_courses.html
@@ -8,8 +8,6 @@
 <link rel="stylesheet" href="{% static 'common/show-hide.css' %}"/>
 <link rel="stylesheet" href="{% static 'course/user_courses.css' %}"/>
 <link rel="stylesheet" href="{% static 'base/tcf-style.css' %}"/>
-
-
 {% endblock %}
 
 {% block content %}
@@ -37,7 +35,8 @@
               <a href="{% url 'course_instructor' course_id=saved.course.id instructor_id=saved.instructor.id %}">
                   <strong>{{ saved.course }} </strong> — {{ saved.instructor.full_name }}
               </a>
-              <button class="ml-auto btn btn-sm bg-tcf-indigo text-white unsave-btn" id="btn_{{saved.course_id}}_{{saved.instructor_id}}_{{saved.id}}" type="button">
+              <p id="title" hidden> {{saved.course.subdepartment.mnemonic}} {{saved.course.number}} </p>
+              <button class="ml-auto btn btn-sm bg-tcf-indigo text-white unsave-btn" id="unsaveCourseBtn{{saved.id}}" type="button">
                   <i class="fa fa-trash-o" aria-hidden="true"></i>
                   Unsave
               </button>
@@ -74,8 +73,8 @@
                         </small>
                         <p class="h4">{{ saved.semester_last_taught }}</p>
                     </div>
-                    <div class="col">
-                        <a href="#saveCourseModal{{saved.course.id}}" data-toggle="modal">
+                    <div class="col-sm col-md-4">
+                        <a href="#saveCourseModal{{saved.id}}" data-toggle="modal">
                         <small class="text-uppercase">
                             <i class="fa fa-sticky-note"></i> Notes
                         </small>
@@ -85,7 +84,7 @@
                 </ul>
             </div>
             </li>
-        {% include "course/save_course_form.html" with course=saved.course instructor=saved.instructor notes=saved.notes%}
+        {% include "course/save_course_form.html" with id=saved.id course=saved.course instructor=saved.instructor notes=saved.notes%}
         {% endfor %}
         {% else %}
         <div class="card col p-5 text-center">
