Updated course description look
Updated the course description on the course page to be the same as Kimberly's mockup without the pre-requisites.

--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -23,8 +23,8 @@
             </div>
 
             <!-- Course Description -->
-            <div class="card">
-                <h4 class="card-header">
+            <div class="card-body">
+                <h4 class="card-title">
                     <a id="course-eval-link" data-toggle="tooltip"
                        data-placement="right"
                        title="Requires NetBadge Login"
@@ -36,9 +36,9 @@
                     </a>
                     Course Description
                 </h4>
-                <div class="card-body">
+                <p class="card-text">
                     {{ course.description }}
-                </div>
+                </p>
             </div>
 
             <br/>
