--- a/tcf_website/templates/course/user_courses.html
+++ b/tcf_website/templates/course/user_courses.html
@@ -30,7 +30,7 @@
         {% csrf_token %}
         {% for saved in courses %}
         <li class="course-card" draggable="true" id="course{{saved.id}}">
-        <div class="card mt-3">
+        <div class="card mt-3" id="card{{saved.id}}">
             <div class="d-flex px-3 m-3 card-header">
               <a href="{% url 'course_instructor' course_id=saved.course.id instructor_id=saved.instructor.id %}">
                   <strong>{{ saved.course }} </strong> — {{ saved.instructor.full_name }}
