--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -28,24 +28,34 @@
 
             <!-- Course Description -->
             {% if course.description|length > 0 %}
-                <div class="card-body">
-                    <h4 class="card-title">
-                        <a id="course-eval-link" data-toggle="tooltip"
-                           data-placement="right"
-                           title="Requires NetBadge Login"
-                           class="text-tcf-blue font-weight-bold float-right"
-                           style="margin-top: 5px; font-size: 16px;"
-                           target="_blank"
-                           href={{ course.eval_link }}>
-                            Official UVA Student Evaluations
-                            <i class="fa fa-external-link" aria-hidden="true"></i>
-                        </a>
-                        Course Description
-                    </h4>
-                    <p class="card-text">
-                        {{ course.description }}
-                    </p>
+            <div class="card-body">
+                <h4 class="card-title">
+                    <a id="course-eval-link" data-toggle="tooltip"
+                       data-placement="right"
+                       title="Requires NetBadge Login"
+                       class="text-tcf-blue font-weight-bold float-right"
+                       style="margin-top: 5px; font-size: 16px;"
+                       target="_blank"
+                       href={{ course.eval_link }}>
+                        Official UVA Student Evaluations
+                        <i class="fa fa-external-link" aria-hidden="true"></i>
+                    </a>
+                    Course Description
+                </h4>
+
+                {% if course.prerequisite|length > 0 %}
+                <div>
+                    <small class="mb-0 text-uppercase" style="font-size: 15px;">
+                        <i class="fa-fw" aria-hidden="true"></i>Pre-Requisite(s):
+                    </small>
+                    {{ course.prerequisite }}
                 </div>
+                {% endif %}
+
+                <p class="card-text">
+                    {{ course.course_description_without_prerequisite }}
+                </p>
+            </div>
             {% endif %}
 
             <br/>
