Add CLAS back to browse.html

--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -18,6 +18,8 @@
         <h2 class="font-weight-light mt-4">Browse by Department</h2>
         <div class="schools text-left">
 
+        {% include "browse/school.html" with school_name=CLAS.name departments=CLAS.department_set.all %}
+        
         {% include "browse/school.html" with school_name=SEAS.name departments=SEAS.department_set.all id="SEAS"%}
 
         {% include "browse/grouped_schools.html" with school_name="Other Schools at the University of Virginia" schools=other_schools misc=misc_school%}
