--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -4,7 +4,7 @@
 {% block title %}Browse - theCourseForum{% endblock %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{% static 'browse/browse.css' %}"/>
+<link rel="stylesheet" href="{% static 'browse/browse.css' %}" />
 {% endblock %}
 
 {% block content %}
@@ -18,12 +18,12 @@
         <h2 class="font-weight-light mt-4">Browse by Department</h2>
         <div class="schools text-left">
 
-            {% include "browse/school.html" with school_name=CLAS.name departments=CLAS.department_set.all %}
+        {% include "browse/school.html" with school_name=CLAS.name departments=CLAS.department_set.all %}
+        
+        {% include "browse/school.html" with school_name=SEAS.name departments=SEAS.department_set.all id="SEAS"%}
 
-            {% include "browse/school.html" with school_name=SEAS.name departments=SEAS.department_set.all %}
+        {% include "browse/grouped_schools.html" with school_name="Other Schools at the University of Virginia" schools=other_schools misc=misc_school%}
 
-            {% include "browse/grouped_schools.html" with school_name="Other Schools at the University of Virginia" schools=other_schools misc=misc_school %}
-
-        </div>
     </div>
+</div>
 {% endblock %}
