--- a/tcf_website/templates/browse/school.html
+++ b/tcf_website/templates/browse/school.html
@@ -1,8 +1,15 @@
 <div class="school card mb-3">
-    <div class="card-header pt-3">
-        <h3 class="card-title mb-0">{{school_name}}</h3>
+    <div class="card-header pt-3" data-toggle="collapse"
+    data-target="#school-{{ id }}" aria-expanded="true">
+        <div class="float-left">
+            <h3 class="card-title mb-0 alignleft">{{school_name}}</h3>
+        </div>
+        <div class="float-right">
+            <h3><i class="fas fa-chevron-down"></i></h3>
+        </div>
+        <div class="clearfix"></div>
     </div>
-    <div class="card-body">
+    <div class="card-body collapse show" id="school-{{ id }}">
       {% block department_list %}
         <ul class="department-list">
             {% for d in departments|dictsort:"name" %}
