Added review drive banner

--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -13,6 +13,7 @@
     </div> {% endcomment %}
     <div class="browse container">
         {% include "../common/leaderboard_ad.html" with ad_slot="9691204298" %}
+        {% include "../common/review-drive-banner.html" %}
 
         <!-- Browse page content -->
         <h2 class="font-weight-light mt-4">Browse by Department</h2>
