Warning for user if they submit 0 total hours/week
Warning modal that appears if user enters 0 *total* hours/week in their review. Only appears once so as to not annoy user.

--- a/tcf_website/templates/reviews/duplicate_review_modal.html
+++ b/tcf_website/templates/reviews/duplicate_review_modal.html
@@ -1,4 +1,4 @@
-<!-- Delete Confirmation Modal -->
+<!-- Duplicate Review Modal -->
 <div class="modal fade" id="duplicate-review" tabindex="-1" role="dialog" aria-labelledby="duplicate-review-label" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
