--- a/tcf_website/templates/course/user_courses.html
+++ b/tcf_website/templates/course/user_courses.html
@@ -36,10 +36,14 @@
                   <strong>{{ saved.course }} </strong> — {{ saved.instructor.full_name }}
               </a>
               <p id="title" hidden> {{saved.course.subdepartment.mnemonic}} {{saved.course.number}} </p>
-              <button class="ml-auto btn btn-sm bg-tcf-indigo text-white unsave-btn" id="unsaveCourseBtn{{saved.id}}" type="button">
-                  <i class="fa fa-trash-o" aria-hidden="true"></i>
-                  Unsave
-              </button>
+              <a class="ml-auto h5 px-2 text-tcf-blue"  href="#saveCourseModal{{saved.id}}" data-toggle="modal">
+                  <i class="fas fa-pencil-alt"></i>
+              </a>
+              <a class="h5 pl-2 text-danger unsave-btn" type="button" id="unsaveCourseBtn{{saved.id}}"
+                    data-toggle="modal" data-target="#deleteReviewModal{{review.id}}">
+                <i class="fa fa-trash-o"></i>
+              </a>
+
             </div>
             <div class="card-body">
                 <ul class="row mb-0 px-3">
@@ -86,12 +90,10 @@
                         <p class="h4">{{ saved.semester_last_taught }}</p>
                     </div>
                     <div class="col-sm col-md-4">
-                        <a href="#saveCourseModal{{saved.id}}" data-toggle="modal">
                         <small class="text-uppercase">
                             <i class="fa fa-sticky-note"></i> Notes
                         </small>
                         <p class="h4 notes-content" id="notes{{saved.id}}">{{ saved.notes }}</p>
-                        </a>
                     </div>
                 </ul>
             </div>
