fix profile dropdown alignment

--- a/tcf_website/templates/base/profile_dropdown.html
+++ b/tcf_website/templates/base/profile_dropdown.html
@@ -1,4 +1,4 @@
-<div class="dropdown-menu settings" aria-labelledby="navbarDropdown">
+<div class="dropdown-menu dropdown-menu-right settings" aria-labelledby="navbarDropdown">
   <a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
   <a class="dropdown-item" href="{% url 'user_reviews' %}">My Reviews</a>
   <a class="dropdown-item" href="{% url 'user_courses' %}">Saved Courses</a>
