save form modal formatting

--- a/tcf_website/templates/course/save_course_form.html
+++ b/tcf_website/templates/course/save_course_form.html
@@ -3,16 +3,16 @@
 <div class="modal fade" id="saveCourseModal{{id}}" tabindex="-1" role="dialog" aria-labelledby="saveCourseModal" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-body">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <div class="modal-header mb-0">
+        <h5><strong> {{course.subdepartment.mnemonic}} {{course.number}} </strong> — {{ instructor.full_name }}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
-          </button>
-        <form id="saveCourseForm{{id}}" class="mt-4" novalidate>
-          <div class="form-row mb-2">
-              <strong> {{course.subdepartment.mnemonic}} {{course.number}} </strong> — {{ instructor.full_name }}
-              <input id="courseID{{id}}" type="hidden" value="{{course.id}}">
-              <input id="instructorID{{id}}" type="hidden" value="{{instructor.id}}">
-          </div>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form id="saveCourseForm{{id}}" novalidate>
+          <input id="courseID{{id}}" type="hidden" value="{{course.id}}">
+          <input id="instructorID{{id}}" type="hidden" value="{{instructor.id}}">
           <div class="form-row">
               <label for="descriptionField">Notes</label>
               <textarea class="form-control" id="notesField{{id}}" placeholder="Use this space to save pros, cons, or other notes to yourself." rows="3">{{ notes }}</textarea>
