--- a/tcf_website/templates/course/user_courses.html
+++ b/tcf_website/templates/course/user_courses.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 <div class="container mx-auto">
-    <h1 class="h2 mt-2"> Saved Courses </h1>
+    <h2 class="mt-2"> Saved Courses </h2>
     <div id="courseContainer">
     {% if courses %}
     <div id="courseToolbar" class="d-flex flex-sm-row flex-column align-items-baseline">
