--- a/tcf_website/static/course/user_courses.css
+++ b/tcf_website/static/course/user_courses.css
@@ -7,12 +7,10 @@
     cursor: move;
 }
 
-.notes-content {
-    display: block;
-    height: 2rem;
-    overflow: hidden;
-}
-
 .dragging {
     border-color: var(--accent-color);
+}
+
+.notes-content {
+    font-size: 1.5rem;
 }
