--- a/tcf_website/templates/course/user_courses.html
+++ b/tcf_website/templates/course/user_courses.html
@@ -83,17 +83,17 @@
                             {% endif %}
                         </p>
                     </li>
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <small class="text-uppercase">
                             <i class="fa fa-calendar"></i> Last Taught
                         </small>
                         <p class="h4">{{ saved.semester_last_taught }}</p>
                     </div>
-                    <div class="col-sm col-md-4">
+                    <div class="col-sm col-md-6">
                         <small class="text-uppercase">
                             <i class="fa fa-sticky-note"></i> Notes
                         </small>
-                        <p class="h4 notes-content" id="notes{{saved.id}}">{{ saved.notes }}</p>
+                        <p class="h4" id="notes{{saved.id}}">{{ saved.notes }}</p>
                     </div>
                 </ul>
             </div>
