--- a/tcf_website/templates/course/user_courses.html
+++ b/tcf_website/templates/course/user_courses.html
@@ -93,7 +93,9 @@
                         <small class="text-uppercase">
                             <i class="fa fa-sticky-note"></i> Notes
                         </small>
-                        <p class="h4" id="notes{{saved.id}}">{{ saved.notes }}</p>
+                        <p class="h4" id="notes{{saved.id}}">
+                          {{ saved.notes }}
+                        </p>
                     </div>
                 </ul>
             </div>
