--- a/tcf_website/templates/base/profile_dropdown.html
+++ b/tcf_website/templates/base/profile_dropdown.html
@@ -2,7 +2,9 @@
   <a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
   <a class="dropdown-item" href="{% url 'user_reviews' %}">My Reviews</a>
   <a class="dropdown-item" href="{% url 'user_courses' %}">Saved Courses
-      <span class="badge badge-pill badge-info">New</span></a>
+      <!-- temporary badge -->
+      <span class="badge badge-pill badge-info">New</span>
+  </a>
   <div class="dropdown-divider"></div>
   <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
 </div>
