--- a/tcf_website/templates/base/sidebar.html
+++ b/tcf_website/templates/base/sidebar.html
@@ -23,11 +23,12 @@
       </a>
     </li>
     <li>
-      <a href="{% url 'about' %}"
-         class="list-group-item list-group-item-action pb-0
-         {% if request.resolver_match.url_name == 'about' %}active{% endif %}">
-        <h4><i class="fa fa-code fa-fw"></i></h4>
-        <p>About</p>
+      <a href="{% url 'user_courses' %}"
+         class="list-group-item list-group-item-action pb-0">
+         <!-- temporary badge -->
+        <span class="badge badge-pill badge-info mb-2">New</span>
+        <h4><i class="fas fa-bookmark fa-fw"></i></h4>
+        <p>Saved</p>
         <hr>
       </a>
     </li>
